--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
     "geist": "^1.4.2",
     "lucide-react": "^0.515.0",
     "next": "14",
     "react": "^18.2.0",
+    "react-day-picker": "^9.7.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "swiper": "^11.2.8",
