--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-day-picker": "^9.7.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
+    "react-input-mask": "^2.0.4",
     "swiper": "^11.2.8",
     "typescript": "^5.4.5"
   },
@@ -30,6 +31,7 @@
     "@types/node": "^20.19.1",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-input-mask": "^3.0.6",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
     "tailwindcss": "^4",
